create sponsor page, change up the photos

--- a/app/views/pages/_banner_title.html.erb
+++ b/app/views/pages/_banner_title.html.erb
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <h1><%= @banner_title || @page_title %></h1>
     <% if @banner_tag %>
-      <p><%= @banner_tag %></p>
+      <p class="banner-tag"><%= @banner_tag %></p>
     <% end %>
   </div>
 </div>
