--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="supersized">
-  <%= image_tag 'car_desert.jpeg', class: "supersized-image" %>
+  <%= image_tag 'soccer.jpg', class: "supersized-image" %>
 </div>
 
 <div class="content-block row">
