--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -27,7 +27,7 @@
 
         <div class="col-sm-6">
           <div class="donate-image-div">
-            <%= image_tag 'ugandan_child.jpg', class: "donate-image" %>
+            <%= image_tag 'graduation_day.jpg', class: "donate-image" %>
           </div>
 
           <%= link_to "Donate", "https://www.google.com", class: "btn btn-lg btn-primary donate-btn", target: "blank" %>
