--- a/app/views/pages/_sidebar.html.erb
+++ b/app/views/pages/_sidebar.html.erb
@@ -19,6 +19,9 @@
     <li id="join" >
       <%= link_to icon('plane') + " Join Us", join_path %>
     </li>
+    <li id="sponsor" >
+      <%= link_to icon('child') + " Sponsor", sponsor_path %>
+    </li>
     <li id="calendar">
       <%= link_to icon('calendar') + " Events", calendar_path %>
     </li>
