add content to home and work

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,8 +47,16 @@ p, li, a {
   color: #222222;
 }
 
+p {
+  font-size: 1.1em;
+}
+
 .banner-tag {
   font-size: 1.5em;
+}
+
+.align-left {
+  text-align: left;
 }
 
 // Template styling
