--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -41,7 +41,15 @@ div.story-head {
 }
 
 // styling for work page
+#history_div {
+  //padding-left: 0;
+  //padding-right: 0;
+}
 
+.work-img {
+  padding-top: 1em;
+  width: 100%;
+}
 
 // styling for leaders page
 .leader-well {
