--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
     </div>
 
     <% if @page_finder == "work" %>
-      <div id="history_div" class="container-fluid">
-        <div id="history_fade" class="row"></div>
-        <div id="history_nav">
+      <div id="work_div" class="container-fluid">
+        <div id="work_fade" class="row"></div>
+        <div id="work_nav">
           <%= render 'work_nav' %>
         </div>
       </div>
