--- a/app/views/pages/_work_nav.html.erb
+++ b/app/views/pages/_work_nav.html.erb
@@ -4,22 +4,19 @@
       <%= link_to "Kingdom Life", "", class: "slider-btn", id: '1_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Purity Clubs", "", class: "slider-btn", id: '2_btn' %>
+      <%= link_to "HIV Prevention", "", class: "slider-btn", id: '2_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Project #3", "", class: "slider-btn", id: '3_btn' %>
+      <%= link_to "Purity Clubs", "", class: "slider-btn", id: '3_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Project #4", "", class: "slider-btn", id: '4_btn' %>
+      <%= link_to "Sponsorships", "", class: "slider-btn", id: '4_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Project #5", "", class: "slider-btn", id: '5_btn' %>
+      <%= link_to "Sponsor a Child", "", class: "slider-btn", id: '5_btn' %>
     </li>
     <li role="presentation" class="slider-label">
       <%= link_to "Project #6", "", class: "slider-btn", id: '6_btn' %>
-    </li>
-    <li class="slider-label">
-      <%= link_to "Project #7", "", class: "slider-btn", id: '7_btn' %>
     </li>
   </ul>
   <div id="slider"></div>
