--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,18 +5,24 @@
 <div class="content-block row">
   <div class="col-sm-6">
     <div class="well">
-      <h3>Content Title</h3>
-      <p>
-        <%= lorem_ipsum(250) %>
+      <h3>
+        Raising an empowered generation
+      </h3>
+      <p class="align-left"> 
+        LOCODI was started by a group of passionate Christians in Soroti, Uganda. We are creating a new generation of citizens that are focused on compassion and demonstrating Christ's love. We invite you to become a part of our work. 
+        <br>
+        <%= link_to "Join us today!", join_path %>
       </p>
     </div>
   </div>
 
   <div class="col-sm-6">
     <div class="well">
-      <h3>Content Title</h3>
-      <p>
-        <%= lorem_ipsum(250) %>
+      <h3>
+        Full of God's love and compassion
+      </h3>
+      <p class="align-left">
+        We are all important parts of one body. We need each other and together, we can do something big for the Kingdom of God. Kindly consider <%= link_to "joining us today", join_path %> through <%= link_to "prayers", social_path %>, a <%= link_to "financial gift", support_path %> or a <%= link_to "vision trip", join_path %>  to check out we do and how you could to help.
       </p>
     </div>
   </div>
