--- a/app/views/pages/join.html.erb
+++ b/app/views/pages/join.html.erb
@@ -1,3 +1,3 @@
-<div class="supersized">
-  <%= image_tag 'graduation.JPG', class: "supersized-image" %>
+<div class="banner-img-div">
+  <%= image_tag 'kids_playing.jpg', class: "banner-img" %>
 </div>
