--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -5,11 +5,18 @@
 <div class="content-block history-block" >
   <div class="well row" id="1">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
+      <%= image_tag "klc_graduation.jpg", class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>Kingdom Life</h4>
-      <p><%= lorem_ipsum (500) %></p>
+      <i>
+        ”...for the equipping of the saints for the work of ministry, for the edifying of the body of Christ.”
+        <br>
+        - Eph. 4:12 (NKJ)
+      </i>
+      <p class="align-left">
+        Our students come from some of the poorest villages and islands of Lake Victoria in Jinja. We seek out those who seek out the heart of God. We provide education for those who want to serve in ministry but have obstacles that prevent them from going to higher learning institutions. Obstacles like limited education and money, or even simply being born a woman.
+      </p>
     </div>
   </div>
 </div>
@@ -17,11 +24,15 @@
 <div class="content-block history-block" >
   <div class="well row" id="2">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
+      <%= image_tag "purity_club.jpg", class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
-      <h4>Purity Clubs</h4>
-      <p><%= lorem_ipsum (500) %></p>
+      <h4>HIV Prevention</h4>
+      <p class="align-left">
+        Recent Statistics show that over 575 teenage girls are infected with HIV/AIDS every week, 35% of University Students are HIV/AIDS Positive and over 1,000 teenage girls get pregnant every month.
+        <br>
+        Because of these alarming statistics, we started the abstinence campaign in 3 different pilot schools. The initial results have been amazing. In all the three schools, the best performing students have come from our clubs, over 400 kids have come to know Jesus as their Lord and Savior, and our successes have been recognized by school authorities in each school.
+      </p>
     </div>
   </div>
 </div>
@@ -29,11 +40,13 @@
 <div class="content-block history-block" >
   <div class="well row" id="3">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
+      <%= image_tag "praying.jpg", class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
-      <h4>Project #3</h4>
-      <p><%= lorem_ipsum (500) %></p>
+      <h4>Purity Clubs</h4>
+      <p class="align-left">
+        In our Purity Clubs we use a variety of teaching methods. We teach through songs, drama, lecture and demonstrations. We also spend time in prayer, allowing the Holy Spirit to work in the hearts of each young person present. Each of these students has a God-given purpose for their lives and we want to see these youth reach their full potential, safe from the harmful consequences so many of their peers experience.
+      </p>
     </div>
   </div>
 </div>
@@ -41,11 +54,13 @@
 <div class="content-block history-block" >
   <div class="well row" id="4">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
+      <%= image_tag "christmas_gifts.jpg", class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
-      <h4>Project #4</h4>
-      <p><%= lorem_ipsum (500) %></p>
+      <h4>Sponsorships</h4>
+      <p class="align-left">
+        We create the opportunity for Westerners and local Ugandans to provide educational support for students. We are currently connecting education sponsors with street kids in Soroti and in a nearby village. As we provide Ugandans with sponsorship opportunities, we also encourage Western partners to <%= link_to "sponsor children in need", sponsor_path %>.
+      </p>
     </div>
   </div>
 </div>
@@ -53,11 +68,16 @@
 <div class="content-block history-block" >
   <div class="well row" id="5">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
+      <%= image_tag "sponsor_a_child.jpg", class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
-      <h4>Project #5</h4>
-      <p><%= lorem_ipsum (500) %></p>
+      <h4>
+        <%= link_to "Sponsor a Child Today", sponsor_path %>
+      </h4>
+      <p class="align-left">
+        A commitment of <%= link_to "$15 a month", sponsor_path %> provides school fees and scholastic materials for one child. The student will also have the opportunity to attend a weekly Bible study and game time. We have an average of 40 students on our sponsorship waiting list at any given time. We need
+         <%= link_to "your support", sponsor_path %> to ensure these children get the education they need to succeed.
+      </p>
     </div>
   </div>
 </div>
@@ -65,23 +85,13 @@
 <div class="content-block history-block" >
   <div class="well row" id="6">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
+      <%= image_tag placeholder_image(200), class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
-      <h4>Project #6</h4>
-      <p><%= lorem_ipsum (500) %></p>
-    </div>
-  </div>
-</div>
-
-<div class="content-block history-block" >
-  <div class="well row" id="7">
-    <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'history-img' %>
-    </div>
-    <div class="col-sm-9 history-narrative" >
-      <h4>Project #7</h4>
-      <p><%= lorem_ipsum (500) %></p>
+      <h4>Welcome Home Ministries</h4>
+      <p class="align-left">
+        Kingdom Life Training Center began because of the outreach that Welcome Home Ministries (WHM) was doing in the villages surrounding Jinja. WHM is a children’s home for 60+ orphans and run-away kids. WHM works to re-unify these children back into their homes or find new adoptive homes. We support WHM in various ways including outreach initiatives and staff support at the home. We also stop by to play with the kids every chance we get.
+      </p>
     </div>
   </div>
 </div>
