fix the work nav

--- a/app/views/pages/_work_nav.html.erb
+++ b/app/views/pages/_work_nav.html.erb
@@ -16,7 +16,7 @@
       <%= link_to "Sponsor a Child", "", class: "slider-btn", id: '5_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Project #6", "", class: "slider-btn", id: '6_btn' %>
+      <%= link_to "Welcome Home Ministry", "", class: "slider-btn", id: '6_btn' %>
     </li>
   </ul>
   <div id="slider"></div>
