--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -85,7 +85,7 @@
 <div class="content-block history-block" >
   <div class="well row" id="6">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200), class: 'work-img' %>
+      <%= image_tag "WHM_playing.jpg", class: 'work-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>Welcome Home Ministries</h4>
