change up link styling

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -46,6 +46,7 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
 
     a {
       display: block;
+      color: #222222;
       text-decoration: none; 
     }
 
