--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,9 @@
 
   <footer class="footer">
     <div class="container-fluid">
-      <p>(c) 2014 LOCODI
+      <p>
+        <%= icon('copyright') %> 
+        2014 LOCODI
         <span id="created_by">
           | Created by <%= link_to "Chiperific", "http://chiperific.com", target: :blank %>
         </span>
