--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,9 +43,17 @@ h3 {
   margin: 10px inherit;
 }
 
-p, li, a {
+p, li {
   color: #222222;
 }
+
+// Don't style links inside headers
+h1, h2, h3, h4, h5 {
+  a {
+    color: inherit;
+  }
+} 
+  
 
 p {
   font-size: 1.1em;
