--- a/app/views/pages/_sidebar.html.erb
+++ b/app/views/pages/_sidebar.html.erb
@@ -5,29 +5,27 @@
 
   <ul id="sidebar_ul">
     <li id="home">
-      <%= link_to icon('home') + " Home", root_path  %>
+      <%= link_to icon('home fa-fw') + " Home", root_path  %>
     </li>
     <li id="work" >
-      <%= link_to icon('fire') + " Work", work_path  %>
+      <%= link_to icon('fire fa-fw') + " Work", work_path  %>
     </li>
     <li id="leaders">
-      <%= link_to icon('gavel') + " Board", leaders_path %>
+      <%= link_to icon('gavel fa-fw') + " Board", leaders_path %>
     </li>
     <li id="support" >
-      <%= link_to icon('group') + " Support", support_path %>
+      <%= link_to icon('group fa-fw') + " Support", support_path %>
     </li>
     <li id="join" >
-      <%= link_to icon('plane') + " Join Us", join_path %>
-    </li>
-    <li id="sponsor" >
-      <%= link_to icon('child') + " Sponsor", sponsor_path %>
-    </li>
-    <li id="calendar">
-      <%= link_to icon('calendar') + " Events", calendar_path %>
+      <%= link_to icon('child fa-fw') + " Join Us", join_path %>
     </li>
     <li id="social" >
-      <%= link_to icon('share-alt') + " Social", social_path %>
+      <%= link_to icon('share-alt fa-fw') + " Social", social_path %>
     </li>
+    <li id="calendar">
+      <%= link_to icon('calendar fa-fw') + " Events", calendar_path %>
+    </li>
+    
   </ul>
 </div>
 
