--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -59,7 +59,7 @@
     <div class="col-sm-9 history-narrative" >
       <h4>Sponsorships</h4>
       <p class="align-left">
-        We create the opportunity for Westerners and local Ugandans to provide educational support for students. We are currently connecting education sponsors with street kids in Soroti and in a nearby village. As we provide Ugandans with sponsorship opportunities, we also encourage Western partners to <%= link_to "sponsor children in need", sponsor_path %>.
+        We create the opportunity for Westerners and local Ugandans to provide educational support for students. We are currently connecting education sponsors with street kids in Soroti and in a nearby village. As we provide Ugandans with sponsorship opportunities, we also encourage Western partners to <%= link_to "sponsor children in need", join_path %>.
       </p>
     </div>
   </div>
@@ -72,11 +72,11 @@
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>
-        <%= link_to "Sponsor a Child Today", sponsor_path %>
+        <%= link_to "Sponsor a Child Today", join_path %>
       </h4>
       <p class="align-left">
-        A commitment of <%= link_to "$15 a month", sponsor_path %> provides school fees and scholastic materials for one child. The student will also have the opportunity to attend a weekly Bible study and game time. We have an average of 40 students on our sponsorship waiting list at any given time. We need
-         <%= link_to "your support", sponsor_path %> to ensure these children get the education they need to succeed.
+        A commitment of <%= link_to "$15 a month", join_path %> provides school fees and scholastic materials for one child. The student will also have the opportunity to attend a weekly Bible study and game time. We have an average of 40 students on our sponsorship waiting list at any given time. We need
+         <%= link_to "your support", join_path %> to ensure these children get the education they need to succeed.
       </p>
     </div>
   </div>
