--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -83,5 +83,10 @@ div.content-block {
   margin-right: auto;
 }
 
-// Styling for history page:
+// Styling for calendar page:
+#calendar, #calendar_div {
+  min-width: 300px;
+  width: 100%;
+  height: 460px;
+}
 
