--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
       ...full of God's love and compassion.
     </h3>
     <p class="">
-      We are all important parts of one body. We need each other. And together, we can do something big for the Kingdom of God. Kindly consider <%= link_to "joining us", join_path %> through <%= link_to "prayers", social_path %>, a <%= link_to "financial gift", support_path %> or a <%= link_to "vision trip", join_path %> to check out what we do and how you could to help.
+      We are all important parts of one body. We need each other. And together, we can do something big for the Kingdom of God. Kindly consider <%= link_to "joining us", join_path %> through <%= link_to "prayers", social_path %>, a <%= link_to "financial gift", support_path %> or a <%= link_to "vision trip", join_path %> to see what we do and how you can help.
     </p>
   </div>
 </div>
