change strategy for sponsorships, remove mailers, style join page, tweak work page.

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -43,6 +43,7 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
     display: block;
     text-indent: 8px;
     line-height: 40px;
+    max-height: 42px;
 
     a {
       display: block;
