--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -14,10 +14,10 @@
       <%= link_to icon('gavel fa-fw') + " Board", leaders_path %>
     </li>
     <li id="support" >
-      <%= link_to icon('group fa-fw') + " Support", support_path %>
+      <%= link_to icon('envelope fa-fw') + " Support", support_path %>
     </li>
     <li id="join" >
-      <%= link_to icon('child fa-fw') + " Join Us", join_path %>
+      <%= link_to icon('group fa-fw') + " Join Us", join_path %>
     </li>
     <li id="social" >
       <%= link_to icon('share-alt fa-fw') + " Social", social_path %>
