--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 </head>
 
 <body >
-  <%= render 'banner_title' %>
+  <%= render 'layouts/banner_title' %>
     
   <div id="wrapper" class="show-sidebar container-fluid">
     
-    <%= render 'sidebar' %>
+    <%= render 'layouts/sidebar' %>
 
     <div id="page_body" class="container-fluid">
       <%= yield %>
