--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -12,7 +12,7 @@
       <i>
         ”...for the equipping of the saints for the work of ministry, for the edifying of the body of Christ.”
         <br>
-        - Eph. 4:12 (NKJ)
+        - Ephesians 4:12 (NKJ)
       </i>
       <p class="align-left">
         Our students come from some of the poorest villages and islands of Lake Victoria in Jinja. We seek out those who seek out the heart of God. We provide education for those who want to serve in ministry but have obstacles that prevent them from going to higher learning institutions. Obstacles like limited education and money, or even simply being born a woman.
@@ -28,8 +28,13 @@
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>HIV Prevention</h4>
+      <i>
+        "You are not your own, for you were bought with a price. So glorify God in your body."
+        <br>
+        - 1 Corinthians 6:19-20 (NKJ)
+      </i>
       <p class="align-left">
-        Recent Statistics show that over 575 teenage girls are infected with HIV/AIDS every week, 35% of University Students are HIV/AIDS Positive and over 1,000 teenage girls get pregnant every month.
+        Recent statistics show that over 575 teenage girls are infected with HIV/AIDS every week, 35% of University Students are HIV/AIDS Positive and over 1,000 teenage girls get pregnant every month.
         <br>
         Because of these alarming statistics, we started the abstinence campaign in 3 different pilot schools. The initial results have been amazing. In all the three schools, the best performing students have come from our clubs, over 400 kids have come to know Jesus as their Lord and Savior, and our successes have been recognized by school authorities in each school.
       </p>
@@ -44,6 +49,11 @@
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>Purity Clubs</h4>
+      <i>
+        "But I say, walk by the Spirit, and you will not gratify the desires of the flesh." 
+        <br>
+        - Galatians 5:16 (NKJ)
+      </i>
       <p class="align-left">
         In our Purity Clubs we use a variety of teaching methods. We teach through songs, drama, lecture and demonstrations. We also spend time in prayer, allowing the Holy Spirit to work in the hearts of each young person present. Each of these students has a God-given purpose for their lives and we want to see these youth reach their full potential, safe from the harmful consequences so many of their peers experience.
       </p>
@@ -58,6 +68,11 @@
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>Sponsorships</h4>
+      <i>
+        "Religion that is pure and undefiled before God, the Father, is this: to visit orphans and widows in their affliction..."
+        <br>
+        - James 1:27 (NKJ)
+      </i>
       <p class="align-left">
         We create the opportunity for Westerners and local Ugandans to provide educational support for students. We are currently connecting education sponsors with street kids in Soroti and in a nearby village. As we provide Ugandans with sponsorship opportunities, we also encourage Western partners to <%= link_to "sponsor children in need", join_path %>.
       </p>
@@ -74,6 +89,11 @@
       <h4>
         <%= link_to "Sponsor a Child Today", join_path %>
       </h4>
+      <i>
+        Verse
+        <br>
+        - Ref (NKJ)
+      </i>
       <p class="align-left">
         A commitment of <%= link_to "$15 a month", join_path %> provides school fees and scholastic materials for one child. The student will also have the opportunity to attend a weekly Bible study and game time. We have an average of 40 students on our sponsorship waiting list at any given time. We need
          <%= link_to "your support", join_path %> to ensure these children get the education they need to succeed.
@@ -89,11 +109,16 @@
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4>Welcome Home Ministries</h4>
+      <i>
+        "...Whoever receives this child in my name receives me, and whoever receives me receives Him who sent me...”
+        <br>
+        - Luke 9:48 (NKJ)
+      </i>
       <p class="align-left">
-        Kingdom Life Training Center began because of the outreach that Welcome Home Ministries (WHM) was doing in the villages surrounding Jinja. WHM is a children’s home for 60+ orphans and run-away kids. WHM works to re-unify these children back into their homes or find new adoptive homes. We support WHM in various ways including outreach initiatives and staff support at the home. We also stop by to play with the kids every chance we get.
+        Kingdom Life Training Center began through the outreach that Welcome Home Ministries (WHM) was doing in the villages surrounding Jinja. WHM is a children’s home for 60+ orphans and run-away kids. WHM works to re-unify these children back into their homes or find new adoptive homes. We support WHM in various ways including outreach initiatives and staff support at the home. We also stop by to play with the kids every chance we get.
       </p>
     </div>
   </div>
 </div>
 
-<div id="history_nav_spacer"></div>
+<div id="work_page_spacer"></div>
