--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,35 @@ h1, h2, h3, h4, h5 {
     color: inherit;
   }
 } 
+
+.unstyled-links {
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+  a:hover {
+    color: #337ab7;
+  }
+  // Except certain links (join page)
+  p {
+    a {
+      color: #337ab7;
+      text-decoration: underline;
+    }
+  }
+}
+
+.styled-links {
+  p {
+    a {
+      color: #337ab7;
+      text-decoration: underline;
+    }
+    a:hover {
+    color: #337ab7;
+  }
+  }
+}
   
 
 p {
@@ -76,7 +105,7 @@ html, body {
   padding: 0;
 }
 
-// added to html,body on History page
+// added to html,body on Work page
 .overflow-hidden {
   overflow: hidden;
 }
@@ -116,7 +145,7 @@ body {
   z-index: 1;
 }
 
-// added to page_body on History page
+// added to page_body on Work page
 .overflowy-scroll {
   overflow-y: scroll;
 }
