add target: :blank to mail_to

--- a/app/views/pages/join.html.erb
+++ b/app/views/pages/join.html.erb
@@ -15,7 +15,7 @@
         <%= lorem_ipsum(200) %>
       </p>
       <p>
-        <%= mail_to "info@locodi.org", "Contact us about a Vision Trip", subject: "I'm interested in a Vision Trip!", encode: "hex" %>
+        <%= mail_to "info@locodi.org", "Contact us about a Vision Trip", subject: "I'm interested in a Vision Trip!", encode: "hex", target: :blank %>
       </p>
     </div>
   </div>
@@ -28,7 +28,7 @@
         <%= lorem_ipsum(200) %>
       </p>
       <p>
-        <%= mail_to "info@locodi.org", "Contact us about Sponsoring a Child", subject: "I'm interested in sponsoring a child!", encode: "hex" %>
+        <%= mail_to "info@locodi.org", "Contact us about Sponsoring a Child", subject: "I'm interested in sponsoring a child!", encode: "hex", target: :blank %>
       </p>
     </div>
   </div>
@@ -41,7 +41,7 @@
         <%= lorem_ipsum(200) %>
       </p>
       <p>
-        <%= mail_to "info@locodi.org", "Contact us about Volunteer Opportunities", subject: "I'm interested in volunteer opportunities!", encode: "hex" %>
+        <%= mail_to "info@locodi.org", "Contact us about Volunteer Opportunities", subject: "I'm interested in volunteer opportunities!", encode: "hex", target: :blank %>
       </p>
     </div>
   </div>
