--- a/app/views/pages/_blog_div.html.erb
+++ b/app/views/pages/_blog_div.html.erb
@@ -1,4 +1,4 @@
-<div class="well blog-entry">
+<div class="well blog-entry spacing" id="<%= index %>">
   <h4>
     <%= blog.css('title').text %>
   </h4>
