--- a/app/assets/stylesheets/banner-img.css.scss
+++ b/app/assets/stylesheets/banner-img.css.scss
@@ -12,3 +12,10 @@
   width: 100%;
   z-index: 1;
 }
+
+// Hide Banner tag lines on small screen widths
+@media (max-width: 400px) {
+  .banner-tag {
+    display: none;
+  }
+}
