--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -19,6 +19,9 @@
     <li id="join" >
       <%= link_to icon('group fa-fw') + " Join Us", join_path %>
     </li>
+    <li id="blog" >
+      <%= link_to icon('list-alt fa-fw') + " Our Blog", blog_path %>
+    </li>
     <li id="social" >
       <%= link_to icon('share-alt fa-fw') + " Social", social_path %>
     </li>
