add RebelMouse to Social page

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -78,6 +78,11 @@ div.content-block {
   margin-right: auto;
 }
 
+// Styling for Social page:
+.rebel-mouse {
+  margin-bottom: 48px;
+}
+
 // Styling for calendar page:
 #calendar, #calendar_div {
   min-width: 300px;
