--- a/app/views/pages/social.html.erb
+++ b/app/views/pages/social.html.erb
@@ -1,3 +1,7 @@
 <div class="banner-img-div">
   <%= image_tag 'water_banner.jpg', class: "banner-img" %>
 </div>
+
+<div class="rebel-mouse">
+  <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=theolupots&flexible=1&dont_load_new_posts=0&more_button=1&theme=16"></script>
+</div>
