--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,25 @@ h1, h2, h3, h4, h5 {
   }
   }
 }
+
+a.unstyled-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+a.unstyled-link:hover {
+  color: #337ab7;
+}
+
+a.styled-link {
+  color: #337ab7;
+  text-decoration: none;
+}
+
+a.styled-link:hover {
+  color: #337ab7;
+  text-decoration: underline;
+}
   
 
 p {
@@ -96,6 +115,10 @@ p {
   text-align: left;
 }
 
+.float-right {
+  float: right;
+}
+
 // Template styling
 html, body {
   display: block;
@@ -105,18 +128,13 @@ html, body {
   padding: 0;
 }
 
-// added to html,body on Work page
-.overflow-hidden {
-  overflow: hidden;
+body {
+  background-color: $pri-clr;
+  margin-bottom: 5%;
 }
 
 .display-none {
   display: none;
-}
-
-body {
-  background-color: $pri-clr;
-  margin-bottom: 5%;
 }
 
 .banner-title {
@@ -132,27 +150,6 @@ body {
   color: #333333;
 }
 
-// Styling for blog page (inside banner_title partial)
-#blog_nav {
-  //display: block;
-  width: 90%;
-  margin-right: 5%;
-  margin-left: 5%;
-}
-
-.blog-nav-btn {
-  width: 16.6%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-// Hide blog titles in buttons on small screen widths
-@media (max-width: 400px) {
-  .blog-ttl {
-    display: none;
-  }
-}
-
 #wrapper {
   height: 100%;
   padding-left: 0;
@@ -164,15 +161,32 @@ body {
 
 #page_body {
   width: 100%;
-  height: 100%;
   display: block;
-  padding-left: 35px;
+  padding-left: 44px;
   z-index: 1;
 }
 
-// added to page_body on Work page
+.page-body-footer-spacer {
+  height: 46px;
+}
+
+// added to page_body on any page with a height greater than 400px
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflowy-scroll {
   overflow-y: scroll;
+}
+
+.overflowy-scroll::-webkit-scrollbar {
+  background: transparent;
+  width: 18px;
+}
+
+.overflowy-scroll::-webkit-scrollbar-thumb {
+  background-color: $quat-clr-trans;
+  border-radius: 9px;
 }
 
 // Give me some space!
