--- a/app/views/pages/_blog_div.html.erb
+++ b/app/views/pages/_blog_div.html.erb
@@ -1,7 +1,11 @@
 <div class="well blog-entry spacing" id="<%= index %>">
   <h4>
     <%= blog.css('title').text %>
+    <i class="float-right">
+      <%= Date.parse(blog.css('updated').text).strftime("%m/%d/%Y") %>
+    </i>
   </h4>
+  
   <div class="align-left">
     <%= raw blog.css('content').text %>
   </div>
