--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="supersized">
-  <%= image_tag 'soccer.jpg', class: "supersized-image" %>
+  <%= image_tag 'soccer2.jpg', class: "supersized-image" %>
 </div>
 
 <div class="content-block row well well-trans">
@@ -7,7 +7,7 @@
     <h3>
       Raising an empowered generation...
     </h3>
-    <p class=""> 
+    <p> 
       LOCODI was started by a group of passionate Christians in Soroti, Uganda. We are creating a new generation of citizens that are focused on compassion and demonstrating Christ's love. We invite you to become a part of our work. 
       <%= link_to "Join us today!", join_path %>
     </p>
@@ -17,11 +17,82 @@
     <h3>
       ...full of God's love and compassion.
     </h3>
-    <p class="">
+    <p>
       We are all important parts of one body. We need each other. And together, we can do something big for the Kingdom of God. Kindly consider <%= link_to "joining us", join_path %> through <%= link_to "prayers", social_path %>, a <%= link_to "financial gift", support_path %> or a <%= link_to "vision trip", join_path %> to see what we do and how you can help.
     </p>
   </div>
 </div>
 
+<div class="content-block row text-align-left toggle-hide">
+
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <div id="box1" class="well">
+      <div class="row">
+        <div class="col-xs-12">
+          <%= image_tag "kids_walking.jpg", class: "thumbnail image-left" %>
+          <h4><%= lorem_ipsum(22) %></h4>
+          <p><%= lorem_ipsum(120) %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <div id="box2" class="well">
+      <div class="row">
+        <div class="col-xs-12">
+          <h4> <- These 3 boxes are optional -> </h4>
+          <p>They can easily be removed.</p>
+          <p>Click the button to hide them. To see them again, refresh the page.</p>
+          <a href="#" class="btn btn-primary btn-sm" id="toggle_hide_btn">Hide the boxes!</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <div id="box3" class="well">
+      <div class="row">
+        <div class="col-xs-12">
+          <%= image_tag "waterfall.jpg", class: "thumbnail image-right" %>
+          <h4><%= lorem_ipsum(22) %></h4>
+          <p><%= lorem_ipsum(120) %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="content-block row spacing">
+
+  <div class="col-xs-12 col-sm-6">
+    <div id="mini_blog" class="well">
+      <h4>
+        <%= link_to "Our latest writings:", blog_path, class: "unstyled-link" %>
+        <%= link_to "Read all", blog_path, class: "float-right styled-link" %>
+      </h4>
+      <table id="blog_table" class="table table-condensed table-fixed">
+        <tbody>
+            <% @blogs.each do |blog| %>
+              <%= render 'blog_mini', blog: blog %>
+            <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-6">
+    <div id="mini_social" class="well">
+      <h4>
+        <%= link_to "Our latests posts:", social_path, class: "unstyled-link"%>
+        <%= link_to "See all", social_path, class: "float-right styled-link" %>
+      </h4>
+      <i class="align-right">
+      </i>
+      <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=theolupots&flexible=0&dont_load_new_posts=1&more_button=0&post_limit=6&show_rebelnav=0"></script>
+    </div>
+  </div>
+</div>
 
   
