fix js for RebelMouse Iframe height

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,6 +23,8 @@
   </div>
 </div>
 
+<!-- TEMP remove if not desired.
+
 <div class="content-block row text-align-left toggle-hide">
 
   <div class="col-xs-12 col-sm-6 col-md-4">
@@ -62,7 +64,7 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
 <div class="content-block row spacing">
 
@@ -90,7 +92,7 @@
       </h4>
       <i class="align-right">
       </i>
-      <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=theolupots&flexible=0&dont_load_new_posts=1&more_button=0&post_limit=6&show_rebelnav=0"></script>
+      <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=theolupots&flexible=0&dont_load_new_posts=1&more_button=0&post_limit=8&show_rebelnav=0&height=1200"></script>
     </div>
   </div>
 </div>
