--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="supersized">
-  <%= image_tag 'soccer2.jpg', class: "supersized-image" %>
+  <%= image_tag 'soccer.jpg', class: "supersized-image" %>
 </div>
 
 <div class="content-block row well well-trans">
@@ -23,48 +23,11 @@
   </div>
 </div>
 
-<!-- TEMP remove if not desired.
-
-<div class="content-block row text-align-left toggle-hide">
-
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div id="box1" class="well">
-      <div class="row">
-        <div class="col-xs-12">
-          <%= image_tag "kids_walking.jpg", class: "thumbnail image-left" %>
-          <h4><%= lorem_ipsum(22) %></h4>
-          <p><%= lorem_ipsum(120) %></p>
-        </div>
-      </div>
-    </div>
+<div class="content-block row">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <%= image_tag "child_reading.jpg", class: "waterfall-img" %>
   </div>
-
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div id="box2" class="well">
-      <div class="row">
-        <div class="col-xs-12">
-          <h4> <- These 3 boxes are optional -> </h4>
-          <p>They can easily be removed.</p>
-          <p>Click the button to hide them. To see them again, refresh the page.</p>
-          <a href="#" class="btn btn-primary btn-sm" id="toggle_hide_btn">Hide the boxes!</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div id="box3" class="well">
-      <div class="row">
-        <div class="col-xs-12">
-          <%= image_tag "waterfall.jpg", class: "thumbnail image-right" %>
-          <h4><%= lorem_ipsum(22) %></h4>
-          <p><%= lorem_ipsum(120) %></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div> -->
+</div>
 
 <div class="content-block row spacing">
 
