--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
   
 
   <footer class="footer">
+    <%= debug(params) if Rails.env.development? %>
     <div class="container-fluid">
       <p>
         <%= icon('copyright') %> 
